force-app/main/default/objects/cpm__Mandate_Schedule__c/fields/cpm__Processing_Date__c.field-meta.xml
<CustomField>
    <fullName>cpm__Processing_Date__c</fullName>
    <label>Processing Date</label>
    <type>Date</type>
</CustomField>