force-app/main/default/objects/cpm__Mandate_Schedule__c/fields/cpm__Recurring_Mandate_Schedule__c.field-meta.xml
<CustomField>
    <fullName>cpm__Recurring_Mandate_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recurring Mandate Schedule</label>
    <referenceTo>cpm__Recurring_Mandate_Schedule__c</referenceTo>
    <relationshipLabel>Mandate Schedules</relationshipLabel>
    <relationshipName>Mandate_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>