force-app/main/default/objects/cpm__Mandate_Schedule__c/fields/cpm__Run_Date__c.field-meta.xml
<CustomField>
    <fullName>cpm__Run_Date__c</fullName>
    <description>Date when mandate schedule is run.</description>
    <inlineHelpText>Date when mandate schedule is run.</inlineHelpText>
    <label>Run Date</label>
    <type>Date</type>
</CustomField>