force-app/main/default/objects/cpm__Mandate_Schedule__c/fields/cpm__Status__c.field-meta.xml
<CustomField>
    <fullName>cpm__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Generated</fullName>
            </value>
            <value>
                <fullName>Pending Verification</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Validate Mandates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>